automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1362,7 +1362,8 @@
    ],
    "source": [
     "df.star_rating.hist()\n",
-    "plt.xlabe"
+    "plt.xlabel(\"Star rating\")\n",
+    "pl"
    ]
   },
   {
