automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,7 +1363,7 @@
    "source": [
     "df.star_rating.hist()\n",
     "plt.xlabel(\"Star rating\")\n",
-    "pl"
+    "plt.ylabel(\"num of ratings\")"
    ]
   },
   {
