automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1363,7 +1363,8 @@
    "source": [
     "df.star_rating.hist()\n",
     "plt.xlabel(\"Star rating\")\n",
-    "plt.ylabel(\"num of ratings\")"
+    "plt.ylabel(\"num of ratings\")\n",
+    "plt.title(\"Distribution of S\")"
    ]
   },
   {
