automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,12 +1369,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    US\n",
+       "1    US\n",
+       "2    US\n",
+       "3    US\n",
+       "4    US\n",
+       "Name: country, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.country.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
