automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,27 +1369,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    US\n",
-       "1    US\n",
-       "2    US\n",
-       "3    US\n",
-       "4    US\n",
-       "Name: country, dtype: object"
+       "US    817\n",
+       "CA    815\n",
+       "GB    576\n",
+       "NL    576\n",
+       "AT    575\n",
+       "DN    575\n",
+       "AU    570\n",
+       "IE    569\n",
+       "CH    568\n",
+       "FR    568\n",
+       "BE    566\n",
+       "NZ    565\n",
+       "IT    550\n",
+       "LU    549\n",
+       "CZ    549\n",
+       "ES    549\n",
+       "FI    549\n",
+       "NO    549\n",
+       "DE    549\n",
+       "PT    547\n",
+       "PL    530\n",
+       "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.country.head()"
+    "df.country.value_counts()"
    ]
   },
   {
