automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1405,7 +1405,8 @@
     }
    ],
    "source": [
-    "df.country.value_counts()"
+    "country_counts = df.country.value_counts()\n",
+    "df."
    ]
   },
   {
