automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1406,7 +1406,7 @@
    ],
    "source": [
     "country_counts = df.country.value_counts()\n",
-    "df."
+    "country_counts.plot"
    ]
   },
   {
