automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,44 +1369,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "US    817\n",
-       "CA    815\n",
-       "GB    576\n",
-       "NL    576\n",
-       "AT    575\n",
-       "DN    575\n",
-       "AU    570\n",
-       "IE    569\n",
-       "CH    568\n",
-       "FR    568\n",
-       "BE    566\n",
-       "NZ    565\n",
-       "IT    550\n",
-       "LU    549\n",
-       "CZ    549\n",
-       "ES    549\n",
-       "FI    549\n",
-       "NO    549\n",
-       "DE    549\n",
-       "PT    547\n",
-       "PL    530\n",
-       "Name: country, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'bar' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-ab21f79cdc42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcountry_counts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcountry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcountry_counts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'bar' is not defined"
+     ]
     }
    ],
    "source": [
     "country_counts = df.country.value_counts()\n",
-    "country_counts.plot"
+    "country_counts.plot(kind=bar)"
    ]
   },
   {
