automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1397,7 +1397,8 @@
    ],
    "source": [
     "country_counts = df.country.value_counts()\n",
-    "country_counts.plot(kind='bar')"
+    "country_counts.plot(kind='bar')\n",
+    "plt.t"
    ]
   },
   {
