--- a/index.ipynb
+++ b/index.ipynb
@@ -1398,7 +1398,7 @@
    "source": [
     "country_counts = df.country.value_counts()\n",
     "country_counts.plot(kind='bar')\n",
-    "plt.title(\"\")"
+    "plt.title(\"NUmber of records from each country\")"
    ]
   },
   {
