automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1398,7 +1398,8 @@
    "source": [
     "country_counts = df.country.value_counts()\n",
     "country_counts.plot(kind='bar')\n",
-    "plt.title(\"NUmber of records from each country\")"
+    "plt.title(\"Number of records per country\")\n",
+    "plt."
    ]
   },
   {
