automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1399,7 +1399,8 @@
     "country_counts = df.country.value_counts()\n",
     "country_counts.plot(kind='bar')\n",
     "plt.title(\"Number of records per country\")\n",
-    "plt."
+    "plt.xlabel(\"Country\")\n",
+    "plt.yl"
    ]
   },
   {
