automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1400,7 +1400,7 @@
     "country_counts.plot(kind='bar')\n",
     "plt.title(\"Number of records per country\")\n",
     "plt.xlabel(\"Country\")\n",
-    "plt.yl"
+    "plt.ylabel(\"num records ()\")"
    ]
   },
   {
