automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1408,7 +1408,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.l"
+   ]
   }
  ],
  "metadata": {
