automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3456,7 +3456,7 @@
     }
    ],
    "source": [
-    "df.info()\n",
+    "#world's worst pie chart\n",
     "plt.pie(df.piece_count)"
    ]
   },
